applications/ozzie/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ozzie
  labels:
    app.kubernetes.io/part-of: ozzie
